# torrplay

./: .dockerignore  .gitignore  .goreleaser.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  android-entrypoint.sh  android.Dockerfile  client-entrypoint.sh  client.Dockerfile  entrypoint.sh  go.mod  go.sum
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: release.yml
.goreleaser/packaging/: postinst.sh  postrm.sh  preinst.sh  prerm.sh  torrplay.service
api/: api.yaml  cfg.yaml
client/: .gitignore  Makefile  README.md  capacitor.config.ts  eslint.config.mjs  globals.d.ts  next.config.ts  package.json  pnpm-lock.yaml  postcss.config.mjs  tailwind.config.ts  vitest.config.mts  vitest.setup.ts
client/android/: .gitignore  build.gradle  capacitor.settings.gradle  settings.gradle  variables.gradle
client/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  provider.tsx
client/components/: add-torrent-dialog-layout.tsx  add-torrent-dialog.tsx  demo-video-player.tsx  (+25 more)
client/src-tauri/: .gitignore  Cargo.toml  build.rs  rustfmt.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/icons/: icon.icns
client/src-tauri/icons/android/mipmap-anydpi-v26/: ic_launcher.xml
client/src-tauri/icons/android/values/: ic_launcher_background.xml
client/src-tauri/src/: lib.rs  main.rs
scripts/: generate_curl.sh  test_generate_curl.sh
web/: web.go
winres/: winres.json  winres.json.license
wix/: installer.wxs  license.rtf
(+132 files in other folders)
