# SPDX-FileCopyrightText: 2026 TorrPlay
#
# SPDX-License-Identifier: MIT

[package]
name = "torrplay-client"
version = "1.0.0"
description = "TorrPlay Client"
authors = ["TorrPlay"]
license = "MIT"
repository = "https://github.com/torrplay/torrplay.git"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "torrplay_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-window-state = "2"
log = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
libc = "0.2"
